--- a/.github/workflows/deploy_oci.yaml
+++ b/.github/workflows/deploy_oci.yaml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run Ansible Playbook
         env:
-            PUBLIC_IP: ${{ steps.get_ip.outputs.PUBLIC_IP }}  
+            PUBLIC_IP: ${{ env.PUBLIC_IP }}
             SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
             DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
             DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
